--- a/styles/default-styles.css
+++ b/styles/default-styles.css
@@ -5,12 +5,16 @@ body {
 	font-family: tahoma, verdana, sans serif;
     color: #077187;
 }
+
+p{
+    font-size: .75em;
+}
 header{
     padding-bottom: 1em;
     background: #077187;
     color: white;
     font-size: 1.5em;
-        padding: 1.5em;
+    padding: 1.5em;
     font-family: 'Noto Sans', sans-serif;
 }
 
@@ -23,8 +27,10 @@ header{
 }
 
 #progress{
-    
+    border-color: aqua;
+    border:2px double #fafafa !important;
     border-radius: 2em;
+    margin-top: 1em;
 }
 
 main{
@@ -34,6 +40,7 @@ main{
 #information{
     float: left;  
     width: 70em;
+    padding-top: 1em;
     padding-left: 3em;
     padding-right: 3em;
     background-color: #077187;
@@ -44,14 +51,14 @@ main{
 }
 
 #controls{
-    padding: 1rem;
+    padding: 1em;
     font-family: 'Noto Sans', sans-serif;
     float: left;
     width: 50%;
 }
 
 #trackInfo{
-    padding: 1rem;
+    padding: 1em;
     font-family: 'Noto Sans', sans-serif;
     float: left;
     width: 50%;
